# computer-vision

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenCV.props  README.md  computer-vision.sln  vcpkg.json
ComputerVision/: ComputerVision.vcxproj  ComputerVision.vcxproj.filters  Exercise1-2.cpp  Exercise1-3.cpp  Exercise1-4.cpp  Exercise2-1.cpp  Exercise2-2.cpp  Exercise2-3.cpp  RussianPlate.cpp
assignments/: exercise_1_2.cpp  exercise_1_3.cpp  exercise_1_4.cpp  exercise_2_1.cpp  exercise_2_2.cpp  exercise_2_3.cpp  exercise_2_4.cpp
src/: russian_plate.cpp
